<?xml version="1.0"?>
<package format="2">
  <name>flybo_utils</name>
  <version>0.0.0</version>
  <description>The flybo_utils package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="anthony@todo.todo">anthony</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

<depend>roscpp</depend>
<depend>rospy</depend>
    <depend>mav_trajectory_generation</depend>
    <depend>mav_trajectory_generation_ros</depend>
    <depend>quadrotor_common</depend>
    <depend>quadrotor_msgs</depend>



    <depend>cv_bridge</depend>
    <depend>pcl_ros</depend>
    <depend>image_transport</depend>
    <depend>nav_msgs</depend>
    <depend>glog_catkin</depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
