<?xml version="1.0"?>
<package format="2">
  <name>map_core</name>
  <version>0.0.0</version>
  <description>The map_core package</description>

  <maintainer email="anthony@todo.todo">anthony</maintainer>


  <license>TODO</license>
  
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>




    <depend>roscpp</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>pcl_ros</depend>
    <depend>image_transport</depend>
    <depend>glog_catkin</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
